--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <h1>
+            Diretrizes de código
+        </h1>
+    </header>
 </body>
 </html>
