Add link to food.html in index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <a href="food.html">comida</a>
     <a href="home.html">home</a>
 </body>
 </html>
